产品页面增加 多选品线功能

--- a/core/app/views/Products/index.html
+++ b/core/app/views/Products/index.html
@@ -1,6 +1,10 @@
 #{extends 'main_full.html' /}
 #{set title:'Product' /}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap-multiselect.css'/}
+#{/set}
 #{set 'moreScripts'}
+    #{script 'bootstrap-multiselect.js'/}
     #{script 'component/pagination.coffee'/}
     #{script 'products/index.coffee'/}
 #{/set}
@@ -25,9 +29,17 @@
       #{/list}
       </select>
 
-        <label class="checkbox inline">
-          <input type="checkbox" name="p.scope" value="true"#{if p.scope} checked #{/if}> 全局搜索
-        </label>
+      <div class="input-prepend inline">
+        <select name="p.categories" multiple="multiple" id="categories">
+        #{list items:categoryIds, as:'c'}
+          <option value="${c}" ${p.categories.contains(c) ? 'selected':''}>${c}</option>
+        #{/list}
+        </select>
+      </div>
+
+      <label class="checkbox inline">
+        <input type="checkbox" name="p.scope" value="true"#{if p.scope} checked #{/if}> 全局搜索
+      </label>
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
