--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -24,7 +24,7 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="收货入库单ID or SKU or 采购计划ID" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="物料编码 or 物料名称 or 规格 or 工艺 or 图号/版本" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -48,7 +48,6 @@
             <th width="150px;">工艺</th>
             <th width="150px;">图号/版本</th>
             <th width="150px;">最近采购价</th>
-            <th width="150px;">供应商</th>
             <th width="250px;">操作</th>
           </tr>
         #{list items:materials, as:'m'}
@@ -61,9 +60,9 @@
             <td>${m.technology}</td>
             <td>${m.version}</td>
             <td></td>
-            <td>${m.cooperator?.name}</td>
             <td>
-
+              <a href="@{Materials.edit(m.id)}" class="btn btn-mini btn-primary">编辑</a>
+              <a href="@{Materials.deleteMaterial(m.id)}" class="btn btn-mini btn-danger">删除</a>
             </td>
           </tr>
         #{/list}
