--- a/core/app/views/Materials/indexBom.html
+++ b/core/app/views/Materials/indexBom.html
@@ -25,7 +25,7 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="收货入库单ID or SKU or 采购计划ID" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="包装组编号 or 名称 or PM" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -61,7 +61,8 @@
             </td>
             <td>#{time_tooltip time:m.updateDate/}</td>
             <td>
-
+              <a href="@{Materials.editBom(m.id)}" class="btn btn-mini btn-primary">编辑</a>
+              <a href="@{Materials.deleteMaterialBom(m.id)}" class="btn btn-mini btn-danger">删除</a>
             </td>
           </tr>
         #{/list}
