开发包材物料

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -89,6 +89,9 @@
                 #{power.ck "deliveryments.index"}
                   <li><a href="@{Deliveryments.index()}">采购单</a></li>
                 #{/power.ck}
+                #{power.ck "deliveryments.index"}
+                  <li><a href="@{MaterialPurchases.index()}">物料采购单</a></li>
+                #{/power.ck}
                 #{power.ck "deliverplans.index"}
                   <li><a href="@{Deliverplans.index()}">出货单</a></li>
                 #{/power.ck}
