--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -34,6 +34,7 @@
       <table class="table table-condensed table-bordered" id="data-table">
         <tr>
           <th>供应商全称</th>
+          <th width="100px;">SKU</th>
           <th width="120px;">物料</th>
           <th>代码</th>
           <th>供应商类型</th>
@@ -47,9 +48,9 @@
         </tr>
       #{list items:coopers, as:'c'}
         <tr>
+          <td>${c.fullName}</td>
           <td style="cursor:pointer;" name="clickTd" data-id="${c.id}" data-url="@{Cooperators.showCooperItem()}">
             <span><i class="icon-reorder"></i></span>
-            <span>${c.fullName}</span>
               #{if c.type==models.procure.Cooperator.T.SUPPLIER}
                 <span class="badge badge-info">${c.showItemNum(true)}</span>
               #{/if}
