--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -13,11 +13,11 @@
   #{if !is_b2b}
     <th width="160px;">Selling</th>
   #{/if}
-    <th width="250px;">SKU<br>产品名称</th>
+    <th width="220px;">SKU<br>产品名称</th>
     <th width="140px;">预计交货时间/<br>预计运输时间</th>
     <th style="width:45px;">计划交货数量</th>
     <th style="width:50px;">实际交货数量</th>
-    <th>交货不足处理方式</th>
+    <th width="80px;">交货不足<br>处理方式</th>
     <th width="60px;">包装信息</th>
     <th>FBA-ShipmentId</th>
     <th>去往仓库</th>
@@ -29,7 +29,6 @@
     <th width="80px;">目标仓库</th>
     <th>项目名称</th>
   </tr>
-
 #{list items:units, as:'unit'}
     #{if !is_check}
       <tr id="inboundUnit_${unit.id}">
@@ -65,7 +64,7 @@
               #{/if}/>
         </td>
         <td>
-          <select name="handType" style="width:120px;
+          <select name="handType" style="width:75px;
               #{if unit.qty == unit.planQty}
                   display:none;
               #{/if}"
@@ -102,18 +101,16 @@
         </td>
         <td>
           <input type="text" name="qualifiedQty" data-qty="${unit.qty}" value="${unit.qualifiedQty}" data-origin="${unit.qualifiedQty}"
-              #{if  Arrays.asList("OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE").contains(unit.unit.stage.name())
-              || unit.status.name()=="Create" }
-                 readonly
-              #{/if} style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
+              #{if Arrays.asList("IN_STORAGE","OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE")
+              .contains(unit.unit.stage.name()) || unit.status.name()=="Create" } readonly #{/if}
+                 style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
         </td>
         <td>
           <input type="text" name="unqualifiedQty" data-qty="${unit.qty}" data-origin="${unit.unqualifiedQty}"
                  value="${unit.unqualifiedQty}"
-              #{if  Arrays.asList("OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE").contains(unit.unit.stage.name())
-              || unit.status.name()=="Create" }
-                 readonly
-              #{/if} style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
+              #{if Arrays.asList("IN_STORAGE","OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE")
+              .contains(unit.unit.stage.name()) || unit.status.name()=="Create" } readonly #{/if}
+                 style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
         </td>
         <td>
           <select name="target" style="max-width: 80px;" ${unit.status.name() != "Receive" ? 'disabled':''}>
@@ -159,7 +156,7 @@
             #{/else}
         </td>
         <td>${unit.unit?.fba?.shipmentId}</td>
-        <td>${unit.unit?.whouse?.name()}</td>
+        <td>${unit.unit?.whouse?.name}</td>
         <td style="color:${unit.unit?.shipType?.rgb()}">${unit.unit?.shipType?.label()}</td>
         <td style="background-color:${unit.status.rgb()}">${unit.status?.label()}</td>
         <td>
