--- a/core/app/views/Refunds/unQualifiedIndex.html
+++ b/core/app/views/Refunds/unQualifiedIndex.html
@@ -49,16 +49,16 @@
       <table class="table table-condensed table-bordered" id="data_table">
         <tr>
           <th><input type="checkbox" id="checkbox_all" class="checkall"></th>
-          <th width="80px;">采购计划ID</th>
+          <th width="70px;">采购计划ID</th>
           <th width="300px;">Selling</th>
-          <th width="200px;">SKU</th>
-          <th>名称</th>
+          <th width="180px;">SKU</th>
+          <th width="180px;">名称</th>
           <th width="60px;">供应商</th>
-          <th width="120px;">FBA-ShipmentId</th>
           <th>项目名称</th>
           <th width="80px">质检时间</th>
           <th width="60px;">不良品数</th>
-          <th width="200px;">处理说明</th>
+          <th width="80px;">不良入库类型</th>
+          <th width="150px;">处理说明</th>
           <th width="200px;">不良品数处理</th>
         </tr>
       #{list items: units, as: 'u'}
@@ -69,11 +69,18 @@
           <td>${u.sku}</td>
           <td rel="tooltip" title="${u.product?.abbreviation}">${u.product?.abbreviation?.xxLong()}</td>
           <td>${u.cooperator?.name}</td>
-          <td>${u.fba?.shipmentId}</td>
           <td>${u.projectName}</td>
           <td>#{time_tooltip time:u.qcDate()/}</td>
           <td>${u.unqualifiedQty}</td>
-          <td><input type="text" name="memo" value=""></td>
+          <td>
+            <select style="width:75px;" name="type">
+              <option value="">请选择</option>
+                #{list items:models.whouse.Refund.InboundType, as:'t'}
+                  <option value="${t.name()}">${t.label()}</option>
+                #{/list}
+            </select>
+          </td>
+          <td><input type="text" name="memo" value="" style="width:150px;"></td>
           <td>
             <input type="text" style="width:35px;" name="units[${u_index-1}].attrs.qty" value="${u.unqualifiedQty}"
                    data-origin="${u.unqualifiedQty}">
@@ -120,6 +127,7 @@
   <input type="hidden" name="unitId" id="id_input">
   <input type="hidden" name="qty" id="qty_input">
   <input type="hidden" name="memo" id="memo_input">
+  <input type="hidden" name="type" id="type_input">
 </form>
 
 
