物料采购单查询和新增

--- a/core/app/views/Cooperators/newMaterialItem.html
+++ b/core/app/views/Cooperators/newMaterialItem.html
@@ -29,7 +29,7 @@
           <select name="copItem.material.id" class="selectize" style="width:250px;">
             <option value="">请选择</option>
           #{list items:materials, as:'m'}
-            <option value="${m.id}" ${copItem.material}>${m.name}</option>
+            <option value="${m.id}" >${m.name}</option>
           #{/list}
           </select>
           <input type="hidden" name="cooperId" value="${cop.id}">
