页面调整宽度

--- a/core/app/views/Refunds/unQualifiedIndex.html
+++ b/core/app/views/Refunds/unQualifiedIndex.html
@@ -52,11 +52,11 @@
           <th width="70px;">采购计划ID</th>
           <th width="300px;">Selling</th>
           <th width="180px;">SKU</th>
-          <th width="180px;">名称</th>
+          <th width="220px;">名称</th>
           <th width="60px;">供应商</th>
-          <th>项目名称</th>
+          <th width="65px;">项目名称</th>
           <th width="80px">质检时间</th>
-          <th width="60px;">不良品数</th>
+          <th width="55px;">不良品数</th>
           <th width="80px;">不良入库类型</th>
           <th width="150px;">处理说明</th>
           <th width="200px;">不良品数处理</th>
