增加收货入库的限制，质检完成之后，不允许修改合格数

--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -101,15 +101,13 @@
         </td>
         <td>
           <input type="text" name="qualifiedQty" data-qty="${unit.qty}" value="${unit.qualifiedQty}" data-origin="${unit.qualifiedQty}"
-              #{if Arrays.asList("IN_STORAGE","OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE")
-              .contains(unit.unit.stage.name()) || unit.status.name()=="Create" } readonly #{/if}
+              #{if unit.status.name()!="Receive" } readonly #{/if}
                  style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
         </td>
         <td>
           <input type="text" name="unqualifiedQty" data-qty="${unit.qty}" data-origin="${unit.unqualifiedQty}"
                  value="${unit.unqualifiedQty}"
-              #{if Arrays.asList("IN_STORAGE","OUTBOUND","SHIPPING","SHIP_OVER","INBOUND","CLOSE")
-              .contains(unit.unit.stage.name()) || unit.status.name()=="Create" } readonly #{/if}
+              #{if unit.status.name()!="Receive" } readonly #{/if}
                  style="width:35px; #{if unit.result?.name() == 'UnCheck'} display:none; #{/if}"/>
         </td>
         <td>
