--- a/core/app/views/Inbounds/edit.html
+++ b/core/app/views/Inbounds/edit.html
@@ -42,7 +42,8 @@
       </tr>
       <tr>
         <th>收货日期<span style="color:red">*</span></th>
-        <td><input type="date" name="inbound.receiveDate" value="${inbound.receiveDate.date()}" required></td>
+        <td><input type="date" name="inbound.receiveDate" value="${inbound.receiveDate.date()}" required
+                   autocomplete="off"></td>
         <th></th>
         <td></td>
       </tr>
