--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html'/}
-#{set title:"采购单列表 ()" /}
+#{set title:"物料采购单列表 ()" /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'deliveryments/index.coffee'/}
