--- a/core/app/views/MaterialPurchases/show.html
+++ b/core/app/views/MaterialPurchases/show.html
@@ -1,20 +1,18 @@
 #{extends 'main_full.html'/}
-#{set title:"采购单 #" + dmt.id /}
+#{set title:"物料采购单 #" + dmt.id /}
 #{set 'moreScripts'}
     #{script 'jquery.filedrop.js'/}
     #{script 'component/dropUpload.coffee'/}
     #{script 'timeline/timeline_js/timeline-api.js'/}
-    #{script 'analyzes/timeline.coffee'/}
+    #{script 'MaterialPurchases/show.es6'/} 
     #{script 'deliveryments/show.coffee'/}
-    #{script 'procureunits/_unit_list.coffee'/}
-    #{script 'deliveryments/fba_carton_contents.coffee'/}
 #{/set}
 
 #{errorMsgs /}
 #{flash_alert /}
 
 #{set isPending: Arrays.asList('PENDING','APPROVE','REJECT').contains(dmt.state.name()) /}
-#{info_row title:'采购单信息'/}
+#{info_row title:'物料采购单信息'/}
 
 <div class="row-fluid">
 #{if dmt.state.name().equals("PENDING_REVIEW")}
@@ -29,10 +27,10 @@
 #{/if}
   <div class="tab-content">
     <div class="tab-pane fade active in" id='currentPage'>
-      <form action="@{Deliveryments.update()}" method="post" name="updateDeliverymentForm" id="updateDeliverymentForm">
+      <form action="@{MaterialPurchases.update()}" method="post" name="updateDeliverymentForm" id="updateDeliverymentForm">
         <table class="table table-condensed table-bordered">
           <tr>
-            <th width="120px;">Id</th>
+            <th width="120px;">物料采购单ID</th>
             <td>
               <span id="deliverymentId">${dmt.id}</span>
               <input type="hidden" name="dmt.id" value="${dmt.id}">
@@ -45,24 +43,17 @@
               (${applyMsg?.split(",")[0]})
             #{/if}
             </td>
-            <th>CreateDate</th>
-            <td>
-              <input type="text" readonly="" disabled="" class="input-medium" name="dmt.createDate" value="${dmt.createDate.datetime()}">
-            </td>
           </tr>
 
           <tr>
             <th>Name</th>
-            <td colspan="2">
+            <td>
               <input type="text" class="span10" name="dmt.name" value="${dmt.name}">
             </td>
-            <td>总额￥ ${total.format('#,###.##')}</td>
-            <th>User</th>
-            <td>${dmt.handler.username}</td>
-          </tr>
-          <tr>
             <th>供应商</th>
             <td>${dmt.cooperator?.name}</td>
+          </tr>
+          <tr>
             <th>下单时间</th>
             <td>
               <input type="date" name="dmt.orderTime" value="${dmt.orderTime?.date()}">
@@ -72,16 +63,31 @@
               <input type="date" name="dmt.deliveryTime" value="${dmt.deliveryTime?.date()}">
             </td>
           </tr>
-
+          <tr>
+            <th>User</th>
+            <td>${dmt.handler.username}</td>
+            <th>项目名称</th>
+            <td>
+              <select name="dmt.projectName" class="inline">
+                <option value="">项目名称</option>
+              #{list items:models.User.COR, as:'c'}
+                  #{if java.util.Arrays.asList(brandName,models.User.COR.MengTop.name()).contains(c.name())}
+                    <option ${c.name() == dmt.units[0].projectName ? 'selected' : ''} value="${c.name()}">${c.label()
+                    }</option>
+                  #{/if}
+              #{/list}
+              </select>
+            </td>
+          </tr>
           <tr>
             <th><h4>Memo:</h4></th>
-            <td colspan="5">
+            <td colspan="3">
               <textarea rows="5" name="dmt.memo" class="span12">${dmt.memo}</textarea>
             </td>
           </tr>
         #{power.ck "products.edit"}
           <tr>
-            <td colspan="6">
+            <td colspan="4">
               <button class="btn btn-primary">更新</button>
             </td>
           </tr>
@@ -90,18 +96,17 @@
       </form>
     </div>
 
-    <div class="tab-pane fade" id='relateDelivery'>
-    #{include 'Deliveryments/_relate_index.html'/}
-    </div>
   </div>
 </div>
+
 
 <div class="row-fluid">
   <div class="span12">
   #{if isPending}
-    <form action="@{Deliveryments.confirm()}" method="post" style="display:inline-block;" id="confirmForm">
+    <form action="@{MaterialPurchases.confirm()}" method="post" style="display:inline-block;" id="confirmForm">
       <div class="input-prepend input-append" style="float:left;">
-        <span class="add-on" rel="popover" content="确认采购单, 采购单进行确认以后, 才可以在运输单中进行挑选, 并且不再允许添加新的采购计划" placement="right"><i class="icon-question-sign"></i></span>
+        <span class="add-on" rel="popover" content="确认物料采购单, 物料采购单进行确认以后, 才可以在运输单中进行挑选, 并且不再允许添加新的采购计划"
+              placement="right"><i class="icon-question-sign"></i></span>
         <input type="hidden" name="id" value="${dmt.id}">
           #{power.ck "products.edit"}
             <input type="button" class="btn btn-primary" id="confirmBtn" value="确认">
@@ -110,228 +115,56 @@
     </form>
   #{/if}
   #{power.ck 'deliveryments.cancel'}
-    <form action="@{Deliveryments.cancel()}" method="post" style="display:inline-block;">
+    <form action="@{MaterialPurchases.cancel()}" method="post" style="display:inline-block;" id="cancelForm">
       <input type="hidden" name="id" value="${dmt.id}">
       <div class="input-append" style="float:left;margin-left:10px;">
         <input type="text" name="msg" value="${msg}" placeHolder="简要填写关闭的原因">
-        <button class="btn btn-danger">取消采购单</button>
+        <button class="btn btn-danger" id="cancelBtn">取消采购单</button>
       </div>
     </form>
   #{/power.ck}
 
-  #{power.ck 'deliveryments.review'}
-      #{if dmt.state.name().equals("PENDING_REVIEW")}
-        <form action="@{Deliveryments.review()}" method="post" style="display:inline-block;">
-          <input type="hidden" name="id" value="${dmt.id}">
-          <div class="input-append" style="float:left;margin-left:10px;">
-            <select style="width:80px;" name="result">
-              <option value="">请选择</option>
-              <option value="true">通过</option>
-              <option value="false">驳回</option>
-            </select>
-            <input type="text" name="msg" value="${msg}" id="apply_input" style="display:none;"
-                   placeHolder="如果驳回，简要填写驳回的原因">
-            <button class="btn btn-warning">提交审核</button>
-          </div>
-        </form>
-      #{/if}
-  #{/power.ck}
-  #{if dmt.apply}
-    <div style="float:left;display:inline-block">
-      <a href="@{Applys.procure(dmt.apply.id)}" class="btn btn-success">${dmt.apply.serialNumber}
-        请款单</a>
-    </div>
-  #{/if}
   </div>
 </div>
 
 <div class="row-fluid">
   <div class="span12 alert">
-    <h4 data-toggle="toggle" data-target="#tl">Timeline <i class="icon-reorder"></i></h4>
+    <h4>供应商反馈 <i class="icon-reorder"></i></h4>
   </div>
 </div>
-<div class="row-fluid">
-  <div id="tl" class="span12" style="height:350px;"></div>
-</div>
 
-#{success_row title:"已经添加进入[采购单]的[采购单元]"/}
+
+
+
+#{success_row title:"已经添加进入[物料采购单]的[物料计划]"/}
 <form action="#" id="bulkpost" method="POST">
   <input type="hidden" name="expressid" id="expressid" value="${expressid}">
   <div class="row-fluid">
     <div class="span12" id="unit_list">
-    #{render 'ProcureUnits/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
+    #{render 'MaterialPurchases/_unit_list.html', units:dmt.units, checkbox:true, key:'delivery', delivery:true/}
     </div>
   </div>
   <div class="row-fluid">
     <div class="btn-toolbar">
     #{power.ck "products.edit"}
-      <a href="javascript:void(0);" data-url='@{Deliveryments.delunits(dmt.id)}' data-method="DELETE"
-         id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从采购单中移除出去" placement="right" class="btn btn-warning">
+      <a href="javascript:void(0);" data-url='@{MaterialPurchases.delunits(dmt.id)}' data-method="DELETE"
+         id="delunit_form_submit" rel="popover" content="将 DELIVERY 状态的采购计划从物料采购单中移除出去" placement="right" class="btn
+         btn-warning">
         解除
       </a>
     #{/power.ck}
-    #{power.ck 'fbas.deploytoamazon'}
-      <a href="javascript:void(0);" data-url='@{FBAs.deploysToAmazon("Deliveryments", dmt.id)}' data-method="POST"
-         id="deployFBAs" class="btn btn-success">
-        批量创建FBA</a>
-      <a href="javascript:void(0);" data-url='@{FBAs.updateCartonContents("Deliveryments", dmt.id)}' data-method="POST"
-         id="updateFbaCartonContents" class="btn btn-success">
-        批量更新FBA箱内包装信息</a>
-    #{/power.ck}
-    #{power.ck 'fbas.procureunitsorder'}
-      <a href="javascript:void(0);" data-url="@{Excels.procureunitsOrder(dmt.id)}" data-method="POST"
-         id="downloadProcureunitsOrder" class="btn btn-success" rel="popover" content="下载选定的采购单元的出货单">
-        <i class="icon-download-alt"></i>下载出货单
-      </a>
-    #{/power.ck}
-      <a href="javascript:void(0);" data-url="@{FBAs.downloadZip("Deliveryments", dmt.id)}" data-method="POST"
-         id="downloadFBAZIP" class="btn btn-info" rel="popover" content="将选定的采购单元的 出货FBA进行压缩打包">
-        <i class="icon-download-alt"></i>下载FBA ZIP 包
-      </a>
+      <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
     </div>
-    <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
   </div>
-#{render 'Deliveryments/_box_number_model.html'/}
-#{render 'Deliveryments/_fba_carton_contents.html'/}
 </form>
+
 
 <div class="row-fluid">
   <div class="span12 alert">
-    <h4 data-toggle="toggle" data-target="#excel">生成采购单信息 <i class="icon-reorder"></i></h4>
+    <h4 data-toggle="toggle" data-target="#excel">生成物料采购单信息 <i class="icon-reorder"></i></h4>
   </div>
 </div>
-#{if dmt.state == models.procure.Deliveryment.S.CANCEL}
-<div id="excel" class="row-fluid" style="display:none;">
-  <span class="text-error">采购单已经取消, 不需要生成采购单 Excel</span>
-</div>
-#{/if}
-#{else }
-<div id="excel" class="row-fluid" style="display:none;">
-  <div class="span12">
-    <form id="generate_excel" method="post" action="@{Excels.deliveryment()}">
-      <table class="table table-bordered table-condensed">
-        <tr>
-          <th>交货地址</th>
-          <td colspan="7">
-          <textarea rows="3" class="span12" name="excel.deliveryAddress" id="excel_deliveryAddress">
-            收货时间：法定工作日 8:30-12:00  13:30-18:00，工作日其他时间到货请提前 1 小时联系。
-            仓库地址：深圳市光明新区玉律村汉海达科技创新园 1 栋 A 区 6 楼
-            电   话：0755-21383192-8060/8061
-            收货联系人：
-                    Jie：  18692275630
-                    杨上德：13724219110
-          </textarea>
-          </td>
-        </tr>
 
-        <tr>
-          <th>交易条款<br>(供应商)</th>
-          <td colspan="3">
-            <textarea rows="8" name="excel.tradeTerms" id="excel_tradeTerms" class="span12"> ${dmt.cooperator.tradingTerms}</textarea>
-          </td>
-          <th>产品要求<br>(产品线)</th>
-          <td colspan="3">
-            <div style="overflow:auto;height:150px;width:580px;">
-                #{list items:dmt.getCopperItems(), as:'cooperItem'}
-                  <a href="@{Cooperators.editCooperItem(cooperItem.id)}" target="_blank" class="btn btn-small btn-info"
-                     rel="popover" content="${cooperItem.formatProductTerms()}">
-                  ${cooperItem.product.sku}
-                  </a>
-                #{/list}
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th colspan="4"><h5 style="text-align:center">供货方信息</h5></th>
-          <th colspan="4"><h5 style="text-align:center">买方信息</h5></th>
-        </tr>
-        <tr>
-          <th>供方</th>
-          <td>
-            <input type="text" name="excel.supplierCompany" id="excel_supplierCompany" value="${dmt.cooperator.fullName}">
-          </td>
-          <th>经办人</th>
-          <td>
-            <input type="text" name="excel.supplier" id="excel_supplier" value="${dmt.cooperator.contacter}">
-          </td>
-
-          <th>买方</th>
-          <td>
-            <input type="text" name="excel.buyerCompany" id="excel_buyerCompany"
-                   value="${isB2b ? models.OperatorConfig.getVal("b2bbuyercompany"):models.OperatorConfig.getVal("buyercompany")}">
-          </td>
-          <th>经办人</th>
-          <td>
-            <input type="text" name="excel.buyer" id="excel_buyer" value="${dmt.handler?.username}">
-          </td>
-        </tr>
-
-        <tr>
-          <th>移动电话</th>
-          <td>
-            <input type="text" name="excel.supplierPhone" id="excel_supplierPhone" value="${dmt.cooperator.phone}">
-          </td>
-          <th>固定电话</th>
-          <td>
-            <input type="text" name="excel.supplierTel" id="excel_supplierTel" value="${dmt.cooperator.tel}">
-          </td>
-
-          <th>移动电话</th>
-          <td><input type="text" name="excel.buyerPhone" id="excel_buyerPhone" value="${dmt.handler?.phone}"></td>
-          <th>固定电话</th>
-          <td>
-            <input type="text" name="excel.buyerTel" id="excel_buyerTel" value="${isB2b ? '' : models.OperatorConfig.getVal("buyertel")}">
-          </td>
-        </tr>
-
-        <tr>
-          <th>传真</th>
-          <td>
-            <input type="text" name="excel.supplierFax" id="excel_supplierFax" value="${dmt.cooperator.fax}">
-          </td>
-          <td colspan="2"></td>
-
-
-          <th>传真</th>
-          <td><input type="text" name="excel.buyerFax" id="excel_buyerFax"></td>
-
-          <th>选择经办人</th>
-          <td>
-            <select id="chosebuyer">
-              <option value="">请选择</option>
-                #{list items:buyers, as:'br'}
-                    #{ifnot br.username == 'wyatt'}
-                      <option value="${br.id}">${br.username}</option>
-                    #{/ifnot}
-                #{/list}
-            </select>
-          </td>
-        </tr>
-
-        <tr>
-          <th>地址</th>
-          <td colspan="3">
-            <input type="text" class="span12" name="excel.supplierAddress" id="excel_supplierAddress" value="${dmt.cooperator.address}">
-          </td>
-
-          <th>地址</th>
-          <td colspan="3">
-            <input type="text" class="span12" name="excel.buyerAddress" id="excel_buyerAddress"
-                   value="${isB2b ? models.OperatorConfig.getVal("b2bbuyeraddress") :models.OperatorConfig.getVal("buyeraddress")}">
-          </td>
-        </tr>
-        <tr>
-          <td colspan="4">
-            <input type="hidden" name="id" value="${dmt.id}">
-            <input type="button" id="generate_excel_btn" class="btn btn-success" value="生成采购单 Excel">
-          </td>
-        </tr>
-      </table>
-    </form>
-  </div>
-</div>
-#{/else}
 
 #{if  Arrays.asList('PENDING','CONFIRM').contains(dmt.state.name())}
     #{info_row title:'可添加进入[采购单]的[采购单元]'/}
@@ -339,7 +172,7 @@
     <div class="row-fluid">
       <div class="span12">
         <input type="hidden" name="dmt.id" value="${dmt.id}">
-          #{render 'ProcureUnits/_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
+          #{render 'MaterialPurchases/_unit_list.html', units:plan_units, checkbox:true, key:'plan'/}
       </div>
     </div>
     <div class="row-fluid">
@@ -372,6 +205,40 @@
 </div>
 
 
-<input type="hidden" id="isNeedApply" value="${isNeedApply}">
-<input type="hidden" id="totalSeven" value="${totalSeven}">
-
+<!--  修改物料计划 弹出div begin   -->
+<div id="bom_modal" class="modal hide fade">
+  <div class="modal-header">
+    <h4>物料计划修改</h4>
+  </div>
+  <div class="modal-body" style="height:300px;">
+    <form action="@{MaterialUnits.updateMaterialUnit()}" method="post" id="updateUnit_form">
+      <input type="hidden" name="unit.id" id="unit_id">
+      <table class="table table-condensed table-bordered">
+        <tr>
+          <th width="30%">采购数量</th>
+          <td>
+            <input type="text" placeHolder="具体数量" id="unit_planQty" name="unit.planQty">
+          </td>
+        </tr>
+        <tr>
+          <th>价格</th>
+          <td>
+            <input type="text" id="unit_planPrice" name="unit.planPrice">
+            <select style="width:100px;" id="unit_planCurrency" name="unit.planCurrency">
+            #{list items:helper.Currency, as:'c'}
+              <option value="${c.name()}">${c.name()}</option>
+            #{/list}
+            </select>
+          </td>
+        </tr>
+        <th>预计交货时间</th>
+        <td><input type="date" name="unit.planDeliveryDate" id="unit_planDeliveryDate"></td>
+      </table>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+    <button class="btn btn-primary" id="submitUpdateBtn">提交</button>
+  </div>
+</div>
+<!--  修改物料计划 弹出div end   -->
