物流单同步数据库问题

--- a/core/app/views/Shipments/_show_progress.html
+++ b/core/app/views/Shipments/_show_progress.html
@@ -267,7 +267,7 @@
       <div class="control-group">
           <div class="controls">
             <label class="checkbox">
-              <input type="checkbox" name="sync" > 是否同步亚马逊
+              <input type="checkbox" name="sync" > 是否只同步数据库
             </label>
           </div>
       </div>
