--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -160,7 +160,8 @@
                 <div class="span2">
                     #{if procureUnit.isNeedPay}
                         #{power.ck 'procureunits.billingprepay'}
-                            #{ifnot procureUnit.hasPrePay()}
+                            #{ifnot procureUnit.hasPrePay()
+                            || (procureUnit.parent != null && procureUnit.parent.hasPrePay())}
                                 #{form @ProcureUnits.billingPrePay(pid, apply.id), method:'POST'}
                                   <input type="submit" value="申请预付款" class="btn btn-mini btn-success"
                                          rel="tooltip" title="${apply.cooperator.first}%">
