页面和功能优化

--- a/core/app/views/MaterialPurchases/blank.html
+++ b/core/app/views/MaterialPurchases/blank.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:'采购收货入库单' /}
+#{set title:'新增物料采购单' /}
 #{set 'moreScripts'}
     #{script 'MaterialPurchases/blank.es6'/}
 #{/set}
