--- a/core/app/views/MaterialUnits/index.html
+++ b/core/app/views/MaterialUnits/index.html
@@ -129,9 +129,21 @@
       <input type="hidden" name="unit.id" id="unit_id">
       <table class="table table-condensed table-bordered">
         <tr>
-          <th width="30%">实际签收数量</th>
+          <th width="30%">计划数量</th>
           <td>
-            <input type="text" placeHolder="实际签收数量" id="unit_receiptQty" name="unit.receiptQty">
+            <input type="text" placeHolder="计划数量" id="unit_receiptQty" name="unit.receiptQty">
+          </td>
+        </tr>
+        <tr>
+          <th width="30%">交货数量</th>
+          <td>
+            <input type="text" placeHolder="交货数量" id="unit_receiptQty" name="unit.receiptQty">
+          </td>
+        </tr>
+        <tr>
+          <th width="30%">入库数量</th>
+          <td>
+            <input type="text" placeHolder="入库数量" id="unit_receiptQty" name="unit.receiptQty">
           </td>
         </tr>
       </table>
