--- a/core/app/views/MaterialPurchases/index.html
+++ b/core/app/views/MaterialPurchases/index.html
@@ -87,8 +87,7 @@
           <th>最先交货时间</th>
           <th>最后交货时间</th>
           <th>交货进度</th>
-          <th>User</th>
-          <th>Create</th>
+          <th>User/Create</th>
         </tr>
       #{list items:materialPurchases, as:'dmt'}
         <tr>
@@ -123,13 +122,13 @@
           <td></td>
           <td>
             <div class="progress ${procress.bgcolor()} progress-striped" style="margin-bottom:0;">
-             
-            </div>
-          </td>
-          <td>${dmt.handler.username}</td>
-          <td>#{time_tooltip time:dmt.createDate/}</td>
+              <div class="bar" style="width: 20%;">
+                <p style="color:black;">2 / 15</p>
+              </div>
+            </div></td>
+          <td>${dmt.handler.username}/#{time_tooltip time:dmt.createDate/}</td>
         </tr>
-       
+
       #{/list}
         <tr class="tb_footer">
           <td colspan="13">
